--- a/src/views/results.ejs
+++ b/src/views/results.ejs
@@ -17,21 +17,26 @@
 			<div class="col-12">
 				<h2 class="products-title">Resultados de la búsqueda: ¿?</h2>
 			</div>
+			<% productsSearch.forEach(({id,name,price,discount,category,description,image}) => { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
-						<a href="/products/detail/¿?">
+						<a href="/products/detail/<%= id %> ">
 							<figure class="product-box_image">
-								<img src="/images/products/¿?" alt="imagen de producto">
+								<img src="/images/products/<%= image %> " alt="imagen de producto">
 							</figure>
 							<article class="product-box_data">
-								<h2>$FINAL PRICE</h2>
-								<span>DISCOUNT% OFF</span>
-								<p>PRODUCT NAME</p>
+								<h2><%= toThousand(price)  %></h2>
+								<% if (discount>0) { %>
+									<span><%=discount   %>% OFF </span>
+								<% } %>
+								
+								<p><%= name %> </p>
 								<i class="fas fa-truck"></i>
 							</article>
 						</a>
 					</section>
 				</div>
+			<% }) %>
 
 			<div class="col-12">
 				<h2 class="products-title" style="color: tomato;">No hay productos que coincidan con esa búsqueda</h2>
