--- a/src/views/results.ejs
+++ b/src/views/results.ejs
@@ -15,7 +15,7 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Resultados de la búsqueda: ¿?</h2>
+				<h2 class="products-title">Resultados de la búsqueda:</h2>
 			</div>
 			<% productsSearch.forEach(({id,name,price,discount,category,description,image}) => { %>
 				<div class="col-12 col-sm-6 col-lg-3">
