--- a/src/views/product-create-form.ejs
+++ b/src/views/product-create-form.ejs
@@ -14,7 +14,7 @@
 			</div>
 		</div>
 		<div class="col-12">
-			<form action="/products/store" method="POST">
+			<form action="/products/store" enctype="multipart/form-data" method="POST">
 				<div class="row product-detail">
 					<div class="col-12 col-md-6">
 						<label for="name" class="form-label">Nombre del producto:</label>
@@ -22,7 +22,7 @@
 					</div>
 					<div class="col-12 col-md-6">
 						<label for="price" class="form-label">Precio del producto:</label>
-						<input type="text" id="price" name="price" placeholder="Ej: 5678" class="form-input">
+						<input type="number" id="price" name="price" placeholder="Ej: 5678" class="form-input">
 					</div>
 					<div class="col-12 col-md-6">
 						<label for="discount" class="form-label">Descuento:</label>
@@ -35,6 +35,10 @@
 							<option value="in-sale">En oferta</option>
 							<option value="visited">Últimos agregados</option>
 						</select>
+					</div>
+					<div class="col-12 col-md-6">
+						<label for="image"></label>
+						<input type="file" name="image" enctype="multipart/form-data">
 					</div>
 					<div class="col-12">
 						<label for="description" class="form-label">Descipción:</label>
