--- a/src/views/results.ejs
+++ b/src/views/results.ejs
@@ -15,7 +15,7 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Resultados de la búsqueda:</h2>
+				<h2 class="products-title">Resultados de la búsqueda:<%= keywords  %></h2>
 			</div>
 			<% productsSearch.forEach(({id,name,price,discount,category,description,image}) => { %>
 				<div class="col-12 col-sm-6 col-lg-3">
@@ -37,7 +37,11 @@
 					</section>
 				</div>
 			<% }) %>
-
+<% if (productsSearch.length>1) { %>
+	<div class="col-12">
+		<h2 class="products-title" style="color: tomato;">No hay productos que coincidan con esa búsqueda</h2>
+	</div>
+<% } %>
 			<div class="col-12">
 				<h2 class="products-title" style="color: tomato;">No hay productos que coincidan con esa búsqueda</h2>
 			</div>
