--- a/src/views/product-create-form.ejs
+++ b/src/views/product-create-form.ejs
@@ -38,7 +38,7 @@
 					</div>
 					<div class="col-12 col-md-6">
 						<label for="image"></label>
-						<input type="file" name="image" enctype="multipart/form-data">
+						<input type="file" name="image">
 					</div>
 					<div class="col-12">
 						<label for="description" class="form-label">Descipción:</label>
